--- a/TrabajoGit/TrabajoGit.csproj
+++ b/TrabajoGit/TrabajoGit.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vista\frmLOGIN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\frmLOGIN.Designer.cs">
+      <DependentUpon>frmLOGIN.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,7 +87,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Logica\" />
-    <Folder Include="Vista\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
